force-app/main/default/objects/Program_Metrics__c/fields/Total_Advance_PTC_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Total_Advance_PTC_Repayment__c</fullName>
    <description>Sum of Form 1040, Line 46 (Excess Advance Premium
Tax Credit Repayment) &gt; $0.</description>
    <inlineHelpText>Sum of Form 1040, Line 46 (Excess Advance Premium
Tax Credit Repayment) &gt; $0.</inlineHelpText>
    <label>Total Advance PTC Repayment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>