force-app/main/default/objects/Program_Metrics__c/fields/Total_Balance_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance_Due_Amount__c</fullName>
    <description>Total dollar amount of balance due shown on accepted returns.</description>
    <inlineHelpText>Total dollar amount of balance due shown on accepted returns.</inlineHelpText>
    <label>Total Balance Due Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>