force-app/main/default/objects/Program_Metrics__c/fields/Total_Balance_Due_Returns__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance_Due_Returns__c</fullName>
    <description>Total number of accepted returns with a balance due.</description>
    <inlineHelpText>Total number of accepted returns with a balance due.</inlineHelpText>
    <label>Total Balance Due Returns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>