force-app/main/default/objects/Program_Metrics__c/fields/Total_Child_Tax_Credit__c.field-meta.xml
<CustomField>
    <fullName>Total_Child_Tax_Credit__c</fullName>
    <description>Total dollar amount of child tax credit claimed on accepted returns.</description>
    <inlineHelpText>Total dollar amount of child tax credit claimed on accepted returns.</inlineHelpText>
    <label>Total Child Tax Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>