force-app/main/default/objects/Program_Metrics__c/fields/Total_EIC__c.field-meta.xml
<CustomField>
    <fullName>Total_EIC__c</fullName>
    <description>Total dollar amount of earned income tax credit claimed on accepted returns.</description>
    <inlineHelpText>Total dollar amount of earned income tax credit claimed on accepted returns.</inlineHelpText>
    <label>Total EIC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>