force-app/main/default/objects/Program_Metrics__c/fields/Total_Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Ending_Balance__c</fullName>
    <description>Calculated field = sum of ending balance data.</description>
    <formula>Cash_Ending_Balance__c + Checking_Ending_Balance__c + Savings_Ending_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of ending balance data.</inlineHelpText>
    <label>Total Ending Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>