force-app/main/default/objects/Program_Metrics__c/fields/Total_Exemptions_7A__c.field-meta.xml
<CustomField>
    <fullName>Total_Exemptions_7A__c</fullName>
    <description>Count of those who answered YES to question 7a on form 8965.</description>
    <inlineHelpText>Count of those who answered YES to question 7a on form 8965.</inlineHelpText>
    <label>Total Exemptions 7A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>