force-app/main/default/objects/Program_Metrics__c/fields/Total_Expenses_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_Paid__c</fullName>
    <description>Calculated field = sum of all expense data.</description>
    <formula>Meeting_Expenses__c + Salaries__c + Gifts_Donations_Paid__c + Trip_Expenses__c + Sales_Expenses__c + Social_Event_Expenses__c + Administrative_Expenses__c + Program_Expenses__c + Newsletter_Expenses__c + Other_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of all expenses paid.</inlineHelpText>
    <label>Total Expenses Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>