force-app/main/default/objects/Program_Metrics__c/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <description>Calculated field = sum of all income data</description>
    <formula>Advertising_Income__c +  Dues_Income__c +  Donations_Received__c +  Trip_Income__c +  Social_Event_Income__c +  Sales_Income__c +  Interest_Dividend_Income__c +  Program_Income__c +  Other_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of all income data.</inlineHelpText>
    <label>Total Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>