force-app/main/default/objects/Program_Metrics__c/fields/Total_IRS_Exemptions__c.field-meta.xml
<CustomField>
    <fullName>Total_IRS_Exemptions__c</fullName>
    <description>Count of Form 8965, part 3 (lines 8-13).</description>
    <inlineHelpText>Count of Form 8965, part 3 (lines 8-13).</inlineHelpText>
    <label>Total IRS Exemptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>