force-app/main/default/objects/Program_Metrics__c/fields/Total_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Total_Marketplace__c</fullName>
    <description>Count of Form 8965 Part 1 filled in (lines 1-6)</description>
    <inlineHelpText>Count of Form 8965 Part 1 filled in (lines 1-6)</inlineHelpText>
    <label>Total Marketplace</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>