force-app/main/default/objects/Program_Metrics__c/fields/Total_PTC__c.field-meta.xml
<CustomField>
    <fullName>Total_PTC__c</fullName>
    <description>Sum of Form 1040 Line 69 (Premium Tax Credit) &gt; $0.</description>
    <inlineHelpText>Sum of Form 1040 Line 69 (Premium Tax Credit) &gt; $0.</inlineHelpText>
    <label>Total PTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>