force-app/main/default/objects/Program_Metrics__c/fields/Total_Responsibility_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Responsibility_Payment__c</fullName>
    <description>Sum of Form 1040, line 61 &gt; $0.</description>
    <inlineHelpText>Sum of Form 1040, line 61 &gt; $0.</inlineHelpText>
    <label>Total Responsibility Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>