force-app/main/default/objects/Program_Metrics__c/fields/Total_Saving_Bond__c.field-meta.xml
<CustomField>
    <fullName>Total_Saving_Bond__c</fullName>
    <description>Total dollar amount of Savings Bonds requested.</description>
    <inlineHelpText>Total dollar amount of Savings Bonds requested.</inlineHelpText>
    <label>Total Saving Bond</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>