force-app/main/default/objects/Program_Metrics__c/fields/Total_Starting_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Starting_Balance__c</fullName>
    <description>Calculated field = sum of beginning balance data.</description>
    <formula>Cash_Starting_Balance__c + Checking_Starting_Balance__c + Savings_Starting_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of beginning balance data.</inlineHelpText>
    <label>Total Starting Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>