force-app/main/default/objects/Program_Metrics__c/fields/Total_State_Transmitted__c.field-meta.xml
<CustomField>
    <fullName>Total_State_Transmitted__c</fullName>
    <description>Total number of state transmitted e-files.</description>
    <inlineHelpText>Total number of state transmitted e-files.</inlineHelpText>
    <label>Total State Transmitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>