force-app/main/default/objects/Program_Metrics__c/fields/Travel_Agency_Directly_Paid__c.field-meta.xml
<CustomField>
    <fullName>Travel_Agency_Directly_Paid__c</fullName>
    <description>Were trip costs paid directly to travel agency?</description>
    <inlineHelpText>Were trip costs paid directly to travel agency?</inlineHelpText>
    <label>Travel Agency Directly Paid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>