force-app/main/default/objects/Program_Metrics__c/fields/Treasurer_Report__c.field-meta.xml
<CustomField>
    <fullName>Treasurer_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Treasurer Report</label>
    <type>Checkbox</type>
</CustomField>