force-app/main/default/objects/Program_Metrics__c/fields/Treasurer_Report_Balanced__c.field-meta.xml
<CustomField>
    <fullName>Treasurer_Report_Balanced__c</fullName>
    <description>Is this chapter&#39;s treasurer report balanced (system total = total ending balance)?</description>
    <inlineHelpText>Is this chapter&#39;s treasurer report balanced (system total = total ending balance)?</inlineHelpText>
    <label>Treasurer Report Balanced</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>