force-app/main/default/objects/Program_Metrics__c/fields/Treasurer_Report_Received__c.field-meta.xml
<CustomField>
    <fullName>Treasurer_Report_Received__c</fullName>
    <label>Treasurer Report Received</label>
    <type>Date</type>
</CustomField>