force-app/main/default/objects/Program_Metrics__c/fields/Trip_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Trip_Expenses__c</fullName>
    <description>Enter trips and tours expenses for this reporting period.</description>
    <inlineHelpText>Enter trips and tours expenses for this reporting period.</inlineHelpText>
    <label>Trip and Tours Expenses</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>