force-app/main/default/objects/Program_Metrics__c/fields/Trip_Income__c.field-meta.xml
<CustomField>
    <fullName>Trip_Income__c</fullName>
    <description>Enter income amount collected from Trips and Tours to reporting cycle.</description>
    <inlineHelpText>Enter income amount collected from Trips and Tours to reporting cycle.</inlineHelpText>
    <label>Trip and Tours Income</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>