force-app/main/default/objects/Program_Metrics__c/fields/Unbalanced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unbalanced_Amount__c</fullName>
    <description>Value = system total - total ending balance.  If difference = 0, then no value is populated.</description>
    <formula>IF( ISPICKVAL(Treasurer_Report_Balanced__c, &quot;Yes&quot;), NULL,
IF( ISPICKVAL(Treasurer_Report_Balanced__c, &quot;No&quot;), ABS(System_Total__c - Total_Ending_Balance__c),NULL
)
)</formula>
    <inlineHelpText>The difference amount of an unbalanced treasurer report.</inlineHelpText>
    <label>Unbalanced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>