force-app/main/default/objects/Program_Metrics__c/fields/Volunteer_Hours_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Advocacy__c</fullName>
    <description>How many volunteer hours did this chapter contribute this year to advocacy/legislative programs?</description>
    <inlineHelpText>How many volunteer hours did this chapter contribute this year to advocacy/legislative programs?</inlineHelpText>
    <label>Volunteer Hours:Advocacy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>