force-app/main/default/objects/Program_Metrics__c/fields/Volunteer_Hours_All_Other__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_All_Other__c</fullName>
    <description>How many volunteer hours did this chapter contribute this year to other programs/events/activities not mentioned in this record?</description>
    <inlineHelpText>How many volunteer hours did this chapter contribute this year to other programs/events/activities not mentioned in this record?</inlineHelpText>
    <label>Volunteer Hours: All Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>