force-app/main/default/objects/Program_Metrics__c/fields/Volunteer_Hours_Day_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Day_of_Service__c</fullName>
    <description>How many volunteer hours did this chapter contribute to this year&#39;s AARP Day of Service event?</description>
    <inlineHelpText>How many volunteer hours did this chapter contribute to this year&#39;s AARP Day of Service event?</inlineHelpText>
    <label>Volunteer Hours: Day of Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>