force-app/main/default/objects/Program_Metrics__c/fields/Volunteer_Hours_Driver_Safety__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Driver_Safety__c</fullName>
    <description>How many volunteer hours did this chapter contribute this year to AARP&#39;s Driver Safety program?</description>
    <inlineHelpText>How many volunteer hours did this chapter contribute this year to AARP&#39;s Driver Safety program?</inlineHelpText>
    <label>Volunteer Hours: Driver Safety</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>