force-app/main/default/objects/Program_Metrics__c/fields/Volunteer_Hours_Fundraising__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Fundraising__c</fullName>
    <description>How many volunteer hours did this chapter contribute this year to fundraising for community service programs?</description>
    <inlineHelpText>How many volunteer hours did this chapter contribute this year to fundraising for community service programs?</inlineHelpText>
    <label>Volunteer Hours:Fundraising</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>