force-app/main/default/objects/Program_Metrics__c/fields/Volunteer_Hours_Health_Wellness__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Health_Wellness__c</fullName>
    <description>How many volunteer hours did this chapter contribute this year to health and wellness programs?</description>
    <inlineHelpText>How many volunteer hours did this chapter contribute this year to health and wellness programs?</inlineHelpText>
    <label>Volunteer Hours:Health &amp; Wellness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>