force-app/main/default/objects/Program_Metrics__c/fields/Volunteer_Hours_Hunger__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Hunger__c</fullName>
    <description>How many volunteers hours did this Chapter contribute to supporting Hunger activities?</description>
    <inlineHelpText>How many volunteers hours did this Chapter contribute to supporting Hunger activities?</inlineHelpText>
    <label>Volunteer Hours:Hunger</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>