force-app/main/default/objects/Program_Metrics__c/fields/Volunteer_Hours_LTC_Nursing_Home__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_LTC_Nursing_Home__c</fullName>
    <description>How many volunteer hours did this chapter contribute this year to long-term care/nursing home support programs?</description>
    <inlineHelpText>How many volunteer hours did this chapter contribute this year to long-term care/nursing home support programs?</inlineHelpText>
    <label>Volunteer Hours:LTC/Nursing Home</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>