force-app/main/default/objects/Program_Metrics__c/fields/Volunteer_Hours_Other_Education__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Other_Education__c</fullName>
    <description>How many volunteer hours did this chapter contribute this year to other education programs?</description>
    <inlineHelpText>How many volunteer hours did this chapter contribute this year to other education programs?</inlineHelpText>
    <label>Volunteer Hours:Other Education</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>