force-app/main/default/objects/Program_Metrics__c/fields/Volunteer_Hours_Scholarships__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Scholarships__c</fullName>
    <description>How many volunteer hours did this chapter contribute this year to education/scholarship programs?</description>
    <inlineHelpText>How many volunteer hours did this chapter contribute this year to education/scholarship programs?</inlineHelpText>
    <label>Volunteer Hours: Scholarships</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>