force-app/main/default/objects/Program_Metrics__c/fields/Volunteer_Hours_Tax_Aide__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours_Tax_Aide__c</fullName>
    <description>How many volunteer hours did this chapter contribute this year to AARP&#39;s Tax-Aide program?</description>
    <inlineHelpText>How many volunteer hours did this chapter contribute this year to AARP&#39;s Tax-Aide program?</inlineHelpText>
    <label>Volunteer Hours:Tax-Aide</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>