force-app/main/default/objects/Program_Metrics__c/fields/Volunteer_of_the_Month__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_of_the_Month__c</fullName>
    <description>Driver Safety volunteer of the month</description>
    <label>Volunteer of the Month</label>
    <length>30</length>
    <type>Text</type>
</CustomField>