force-app/main/default/objects/Program_Metrics__c/fields/VOY__c.field-meta.xml
<CustomField>
    <fullName>VOY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VOY</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Metrics (VOY)</relationshipLabel>
    <relationshipName>Program_MetricsbcFD</relationshipName>
    <type>Lookup</type>
</CustomField>