force-app/main/default/objects/Program_Metrics__c/fields/X3_Community_Service_Projects_Sponsored__c.field-meta.xml
<CustomField>
    <fullName>X3_Community_Service_Projects_Sponsored__c</fullName>
    <description>Has this chapter sponsored 3 community service projects this year?</description>
    <inlineHelpText>Has this chapter sponsored 3 community service projects this year?</inlineHelpText>
    <label>3 Community Service Projects Sponsored</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>