force-app/main/default/objects/Program_Metrics__c/recordTypes/Chapters_Program_Metrics.recordType-meta.xml
<RecordType>
    <fullName>Chapters_Program_Metrics</fullName>
    <active>true</active>
    <description>Record type for Chapter program specific annual data.</description>
    <label>Chapters Program Metrics</label>
</RecordType>