force-app/main/default/objects/Program_Metrics__c/recordTypes/Driver_Safety_Program_Metrics.recordType-meta.xml
<RecordType>
    <fullName>Driver_Safety_Program_Metrics</fullName>
    <active>true</active>
    <label>Driver Safety Program Metrics</label>
</RecordType>