force-app/main/default/objects/Program_Metrics__c/recordTypes/Tax_Aide_Site_Metrics.recordType-meta.xml
<RecordType>
    <fullName>Tax_Aide_Site_Metrics</fullName>
    <active>true</active>
    <description>Record type for Tax-Aide site activity and IRS reported data.</description>
    <label>Tax-Aide Site Metrics</label>
</RecordType>