force-app/main/default/objects/Program_Metrics__c/validationRules/April_VoM_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>April_VoM_Selection</fullName>
    <active>true</active>
    <description>Restricts April VoM selection by a State Coordinator (ADS Program Metric Edit permission set user) to the April Report Period (April 11 to May 10) on Driver Safety record types.</description>
    <errorConditionFormula>AND(
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
  $Profile.Name &lt;&gt; &quot;System Integrator&quot;, 
  $Profile.Name &lt;&gt; &quot;Driver Safety Staff - LMS Admin&quot;, 
  ISCHANGED( Apr__c ),
  NOT(AND(
      YEAR ( TODAY() ) == YEAR ( Report_Period_Start_Date__c ), 
      YEAR ( TODAY() ) == YEAR ( Report_Period_End_Date__c ), 
      AND(
        (TODAY() &gt; DATE(YEAR ( Report_Period_End_Date__c ), 4, 11)), 
        (TODAY() &lt; DATE(YEAR ( Report_Period_End_Date__c ), 5, 10))
        ))
    ) 
)</errorConditionFormula>
    <errorMessage>You can select an April Volunteer of the Month only between April 11 - May 10 of the Report Period calendar year.</errorMessage>
</ValidationRule>