force-app/main/default/objects/Program_Metrics__c/validationRules/August_VoM_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>August_VoM_Selection</fullName>
    <active>true</active>
    <description>Restricts August VoM selection by a State Coordinator (ADS Program Metric Edit permission set user) to the August Report Period (August 11 to September 10) on Driver Safety record types.</description>
    <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;System Integrator&quot;, 
$Profile.Name &lt;&gt; &quot;Driver Safety Staff - LMS Admin&quot;, 
ISCHANGED( Aug__c ), 
NOT(AND( 
YEAR ( TODAY() ) == YEAR ( Report_Period_Start_Date__c ), 
YEAR ( TODAY() ) == YEAR ( Report_Period_End_Date__c ), 
AND( 
(TODAY() &gt; DATE(YEAR ( Report_Period_End_Date__c ), 8, 11)), 
(TODAY() &lt; DATE(YEAR ( Report_Period_End_Date__c ), 9, 10)) 
)) 
) 
)</errorConditionFormula>
    <errorMessage>You can select an August Volunteer of the Month only between August 11 - September 10 of the Report Period calendar year.</errorMessage>
</ValidationRule>