force-app/main/default/objects/Program_Metrics__c/validationRules/Chapter_Metrics_Record_Lockout.validationRule-meta.xml
<ValidationRule>
    <fullName>Chapter_Metrics_Record_Lockout</fullName>
    <active>true</active>
    <description>Only authorized users and system administrators can edit program metric records after report period end date has elapsed.</description>
    <errorConditionFormula>AND(
    Lockout_Date__c  &lt; TODAY(),
    $Profile.Name  &lt;&gt; &quot;System Administrator&quot;,
    $Profile.Name  &lt;&gt; &quot;System Integrator&quot;,
    $Profile.Name  &lt;&gt; &quot;Chapters Staff - LMS Admin&quot;,
    CONTAINS(RecordType.Name, &quot;Chapters&quot;))</errorConditionFormula>
    <errorDisplayField>Lockout_Date__c</errorDisplayField>
    <errorMessage>This record is locked and no longer editable.  Please contact your program&#39;s system administrator or staff person to make any additional edits to this record.</errorMessage>
</ValidationRule>