force-app/main/default/objects/Program_Metrics__c/validationRules/February_VoM_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>February_VoM_Selection</fullName>
    <active>true</active>
    <description>Restricts February VoM selection by a State Coordinator (ADS Program Metric Edit permission set user) to the February Report Period (February 11 to March 10) on Driver Safety record types.</description>
    <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;System Integrator&quot;, 
$Profile.Name &lt;&gt; &quot;Driver Safety Staff - LMS Admin&quot;, 
ISCHANGED( Feb__c ), 
NOT(AND( 
YEAR ( TODAY() ) == YEAR ( Report_Period_Start_Date__c ), 
YEAR ( TODAY() ) == YEAR ( Report_Period_End_Date__c ), 
AND( 
(TODAY() &gt; DATE(YEAR ( Report_Period_End_Date__c ), 2, 11)), 
(TODAY() &lt; DATE(YEAR ( Report_Period_End_Date__c ), 3, 10)) 
)) 
) 
)</errorConditionFormula>
    <errorMessage>You can select a February Volunteer of the Month only between February 11 - March 10 of the Report Period calendar year.</errorMessage>
</ValidationRule>