force-app/main/default/objects/Program_Metrics__c/validationRules/January_VoM_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>January_VoM_Selection</fullName>
    <active>true</active>
    <description>Restricts January VoM selection by a State Coordinator (ADS Program Metric Edit permission set user) to the January Report Period (January 11 to February 10) on Driver Safety record types.</description>
    <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;System Integrator&quot;, 
$Profile.Name &lt;&gt; &quot;Driver Safety Staff - LMS Admin&quot;, 
ISCHANGED( Jan__c ), 
NOT(AND( 
YEAR ( TODAY() ) == YEAR ( Report_Period_Start_Date__c ), 
YEAR ( TODAY() ) == YEAR ( Report_Period_End_Date__c ), 
AND( 
(TODAY() &gt; DATE(YEAR ( Report_Period_End_Date__c ), 1, 11)), 
(TODAY() &lt; DATE(YEAR ( Report_Period_End_Date__c ), 2, 10)) 
)) 
) 
)</errorConditionFormula>
    <errorMessage>You can select a January Volunteer of the Month only between January 11 - February 10 of the Report Period calendar year.</errorMessage>
</ValidationRule>