force-app/main/default/objects/Program_Metrics__c/validationRules/July_VoM_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>July_VoM_Selection</fullName>
    <active>true</active>
    <description>Restricts July VoM selection by a State Coordinator (ADS Program Metric Edit permission set user) to the July Report Period (July 11 to August 10) on Driver Safety record types.</description>
    <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;System Integrator&quot;, 
$Profile.Name &lt;&gt; &quot;Driver Safety Staff - LMS Admin&quot;, 
ISCHANGED( Jul__c ), 
NOT(AND( 
YEAR ( TODAY() ) == YEAR ( Report_Period_Start_Date__c ), 
YEAR ( TODAY() ) == YEAR ( Report_Period_End_Date__c ), 
AND( 
(TODAY() &gt; DATE(YEAR ( Report_Period_End_Date__c ), 7, 11)), 
(TODAY() &lt; DATE(YEAR ( Report_Period_End_Date__c ), 8, 10)) 
)) 
) 
)</errorConditionFormula>
    <errorMessage>You can select a July Volunteer of the Month only between July 11 - August 10 of the Report Period calendar year.</errorMessage>
</ValidationRule>