force-app/main/default/objects/Program_Metrics__c/validationRules/June_VoM_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>June_VoM_Selection</fullName>
    <active>true</active>
    <description>Restricts June VoM selection by a State Coordinator (ADS Program Metric Edit permission set user) to the June Report Period (June 11 to July 10) on Driver Safety record types.</description>
    <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;System Integrator&quot;, 
$Profile.Name &lt;&gt; &quot;Driver Safety Staff - LMS Admin&quot;, 
ISCHANGED( Jun__c ), 
NOT(AND( 
YEAR ( TODAY() ) == YEAR ( Report_Period_Start_Date__c ), 
YEAR ( TODAY() ) == YEAR ( Report_Period_End_Date__c ), 
AND( 
(TODAY() &gt; DATE(YEAR ( Report_Period_End_Date__c ), 6, 11)), 
(TODAY() &lt; DATE(YEAR ( Report_Period_End_Date__c ), 7, 10)) 
)) 
) 
)</errorConditionFormula>
    <errorMessage>You can select a June Volunteer of the Month only between June 11 - July 10 of the Report Period calendar year.</errorMessage>
</ValidationRule>