force-app/main/default/objects/Program_Metrics__c/validationRules/Limited_Edit_Access_to_Program_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Limited_Edit_Access_to_Program_Name</fullName>
    <active>true</active>
    <description>Only Chapter profiles (all) and Tax-Aide Staff profiles can edit program on program metrics record.</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;System Integrator&quot;, 
$Profile.Name &lt;&gt; &quot;Tax-Aide Staff - LMS Admin&quot;,
NOT($Permission.Delegated_Administrator), 
(ISCHANGED( Program__c )))</errorConditionFormula>
    <errorDisplayField>Program__c</errorDisplayField>
    <errorMessage>Program can only be edited by specified users.  Please contact an AARP staff person from your program if you need to edit this field.</errorMessage>
</ValidationRule>